user controller modified
