# public/swagger.json
@@ -6,6 +6,11 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"TaskEither_any.any_": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": false
+			},
 			"BodyTypeOf_typeofauthDto.input.register_": {
 				"properties": {
 					"lastname": {
@@ -77,7 +82,20 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/TaskEither_any.any_"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"username": "username",
+											"firstname": "firstname",
+											"lastname": "lastname",
+											"email": "email@email.email",
+											"createdAt": "2023-01-14T16:26:57.587Z"
+										}
+									}
+								}
 							}
 						}
 					}
@@ -104,7 +122,16 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/TaskEither_any.any_"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"jwt": "true"
+										}
+									}
+								}
 							}
 						}
 					}
@@ -131,7 +158,22 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/TaskEither_any.any_"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"id": "63c25f4114226535d99056dd",
+											"username": "username",
+											"email": "email@email.email",
+											"birthday": "2023-01-14T16:26:57.598Z",
+											"country": "Iran",
+											"firstname": "firstname",
+											"lastname": "lastname"
+										}
+									}
+								}
 							}
 						}
 					}
@@ -148,6 +190,109 @@
 						}
 					}
 				}
+			}
+		},
+		"/user": {
+			"get": {
+				"operationId": "GetAll",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TaskEither_any.any_"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"count": 1,
+											"values": [
+												{
+													"id": "63bea0fa1bc80f6d62334fb4",
+													"username": "username",
+													"email": "email@email.email"
+												}
+											]
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "num",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "page",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "search",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/user/{userId}": {
+			"get": {
+				"operationId": "GetById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TaskEither_any.any_"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"user": {
+												"id": "63bea0fa1bc80f6d62334fb4",
+												"username": "username",
+												"email": "email@email.email",
+												"firstname": "firstname",
+												"lastname": "lastname",
+												"birthday": "2023-01-14T16:26:57.620Z",
+												"country": "Iran"
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
